--- a/src/App.scss
+++ b/src/App.scss
@@ -18,12 +18,11 @@ main {
 
 header {
   margin: 0;
-  height: 56px;
+  height: 62px;
   padding: 0 16px 0 24px;
   background-color: #35495E;
   color: #ffffff;
   display: flex;
-
 }
 
 header span {
@@ -35,4 +34,13 @@ header span {
   font-weight: 400;
   box-sizing: border-box;
   padding-top: 16px;
+  margin-top:3px;
+}
+
+.logo{
+  background-image: url('logo.png');
+  background-size: cover;
+  width: 56px;
+  height: 56px;
+  margin: 3px 1% 0 2%;
 }
