--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 body {
   margin: 0;
+  background-image:url(hexellence.png);
 }
-
 #app {
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -70,9 +70,9 @@ header span {
   display: flex;
   justify-content: flex-end;
   width: 50%;
-  ul {
+  .log {
     margin: 0;
-    width: 50%;
+    width: 40%;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -81,6 +81,24 @@ header span {
       display: flex;
       align-items: center;
       padding: 0 5% 0 5%;
+      &:hover{
+        background-color:#3d4f61;
+        cursor: pointer;
+      }
+    }
+  }
+  .opt {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    li{
+      height: 100%;
+      display: flex;
+      align-items: center;
+      padding: 0 3% 0 3%;
       &:hover{
         background-color:#3d4f61;
         cursor: pointer;
