--- a/src/components/historyPage/HistoryPage.scss
+++ b/src/components/historyPage/HistoryPage.scss
@@ -1,5 +1,10 @@
-.container{
-    width: 40vw;
+.menu{
+    color: #35495E;
+    letter-spacing: 0.2vw;
+}
+#container{
+    width: 60vw;
+    min-width: 60vw;
     margin: 10vh  auto 0 auto;
     background-color: #FFF;
     box-shadow:
@@ -9,7 +14,7 @@
     table {  
         color: #333;
         font-family: Helvetica, Arial, sans-serif;
-        width: 40vw; 
+        min-width: 60vw;
         border-collapse: collapse; 
         border-spacing: 0;
         border-radius: 5px;
