--- a/src/components/statisticPage/statUser/StatUser.scss
+++ b/src/components/statisticPage/statUser/StatUser.scss
@@ -5,6 +5,11 @@
     .menu{
         margin:2% 0 5% 0; 
     }
+    .user{
+        margin-bottom: 5%;
+        display: flex;
+        justify-content: flex-start;
+    }
     .charts{
         display: flex;
         flex-direction: row;
@@ -18,10 +23,4 @@
             width: 41vw;
         }
     }
-}
-span{
-    font-family: 'Avenir', Helvetica, Arial, sans-serif;
-    -webkit-font-smoothing: antialiased;
-    font-size: 12px;
-    color: #2c3e50;
 }
